# PET-Project

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
demos/: 01-guess-the-number.md  02-bouncing-ball.md  03-sieve-benchmark.md  04-snake-asm.md  05-debug-hunt.md  06-invaders-asm.md  06-space-invaders-asm.md  README.md
demos/hello-asm/: program.s
demos/invaders/: AUDIT.md  README.md  invaders-test.yaml  invaders.d64  invaders.lbl  invaders.prg  invaders.s
demos/muncher/: AUDIT.md  README.md  muncher-test.yaml  muncher.s
demos/muncher/inc/: ui.s  (+10 more)
docs/: cli.md
skills/6502-assembly/: SKILL.md
skills/6502-debugging/: SKILL.md
skills/pet-development/: SKILL.md
src/petlib/: __init__.py  basic.py  build.py  cli.py  daemon.py  daemon_client.py  disasm.py  disk.py  machines.py  mcp_server.py  monitor.py  ops.py  packaging.py  protocol.py  romdoc.py  rpc.py  screen.py  session.py  symbols.py  testing.py  text.py
tests/: doc_helpers.py  fake_vice.py  test_basic.py  test_build.py  test_cli_basic.py  test_cli_break.py  test_cli_build.py  test_cli_disk.py  test_cli_help_version.py  test_cli_inspect.py  test_cli_load.py  test_cli_package.py  test_cli_rom.py  test_cli_session.py  test_cli_step.py  test_cli_test.py  test_cli_wait.py  test_daemon.py  test_daemon_client.py  test_disasm.py  test_disk.py  test_docs_asm.py  test_docs_cli.py  test_docs_cookbook.py  test_docs_memory.py  test_docs_readme.py  test_docs_rom_basic.py  test_docs_skills.py  test_integration_build.py  test_integration_daemon.py  test_integration_debug.py  test_integration_disk.py  test_integration_mcp.py  test_integration_runner.py  test_integration_vice.py  test_machines.py  test_mcp_build.py  test_mcp_debug.py  test_mcp_scaffold.py  test_mcp_session.py  (+22 more)
tests/data/: hello-autorun.yaml  hello-loadrun.yaml
(+23 files in other folders)
