[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pet-tools"
version = "0.1.0"
description = "AI-oriented toolset for developing and debugging Commodore PET software on VICE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["click>=8.1", "pillow>=10", "pyyaml>=6", "mcp>=1.28"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pet = "petlib.cli:main"
pet-tools-mcp = "petlib.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/petlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["vice: requires a working xpet (VICE) installation on PATH"]
