[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pet-tools"
version = "1.0.0"
description = "AI-oriented toolset for developing and debugging Commodore PET software on VICE"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["click>=8.1", "pillow>=10", "pyyaml>=6", "mcp>=1.28"]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage>=7.10", "ruff>=0.15"]

[project.scripts]
pet = "petlib.cli:main"
pet-tools-mcp = "petlib.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/petlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["vice: requires a working xpet (VICE) installation on PATH"]

[tool.coverage.run]
source = ["petlib"]
branch = true
parallel = true
sigterm = true
patch = ["subprocess"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "I"]
ignore = ["E702"]   # `a(); b()` teardown pairs in tests are house idiom
